feat: confirmar produccion (B14)
